@@ -16,6 +16,7 @@
 - Improved performance of DOM tree processing during template execution.
 - Improved MANIFEST jar metadata.
 - Updated dependencies (OGNL 3.0.6 -> 3.0.8; nekohtml 1.9.15 -> 1.9.21; slf4j 1.6.1 -> 1.6.6)
+- Fixed StandardCache not dealing with SoftReferences correctly under specific get/put sequence scenarios.
 
 
 2.1.3
